# tap4dream

trunk/client/frameworks/Preferences/: Preferences.h  PreferencesJni.cpp  PreferencesJni.h  Preferences_android.cpp  Preferences_ios.cpp  Preferences_linux.cpp  Preferences_win32.cpp
trunk/client/frameworks/libjson/: CMakeLists.txt  JSONOptions.h  version.txt
trunk/client/frameworks/libjson/_internal/Source/: CMakeLists.txt  JSONNode.h  JSONStats.h
trunk/client/frameworks/libjson/_internal/Source/JSONDefs/: CMakeLists.txt
trunk/client/frameworks/md5/: MD5Checksum.cpp  MD5Checksum.h  MD5ChecksumDefines.h
trunk/client/poker/Classes/: Constant.h  Global.cpp  Global.h  Settings.cpp  Settings.h
trunk/client/poker/proj.android/: .classpath  .project  AndroidManifest.xml  build.sh  build.xml  build_native.sh  project.properties
trunk/client/poker/proj.ios/: Info.plist
trunk/client/tools/resources/: ResourceName.cpp  (+3 more)
trunk/server/: .project  API.py  BonusGame.py  BonusGameStep.py  BonusGameType.py  CfgTable.py  ConfMgr.py  Config.py  DB.py  Error.py  FreeSpin.py  FriendRequest.py  IndexTable.py  Lobby.py  Location.py  Logging.py  Login.py  Notice.py  PayTable.py  Purchase.py  Session.py  SlotMachine.py  Social.py  SpecialBonus.py  Stat.py  Table.py  Tournament.py  User.py  UserGift.py  UserRewardLog.py  UserShareGift.py  Utils.py  Version.py  manage.py  test.py
trunk/server/scripts/: db_sync.py  db_tool.py  payout.py  payout_old.py  robot.py  robot_user.py  slotomania.py  test.py  test_bonus.py  tournament.py
trunk/server/slot/: settings.py  urls.py  wsgi.py
(+297 files in other folders)
